--- a/_posts/2014-11-01-cfes.markdown
+++ b/_posts/2014-11-01-cfes.markdown
@@ -10,7 +10,7 @@ logo: logo_cfes.jpg
 > The site is built around a blog containing up-to-date design news, and a full magazine archive for subscribers.
 > Working with Victorians, the Commissioner seeks to enhance knowledge and understanding of issues relating to the social, economic and environmental aspects of an ecologically sustainable future for our state.
 
-> Services: Branding, illustration, and website design.
+> **Services:** Branding, illustration, and website design.
 
 ![Website design, desktop size]({{ site.url }}/assets/folio_cfes-01.jpg)
 ![Website design, mobile and iphone size]({{ site.url }}/assets/folio_cfes-02.jpg)
