--- a/_posts/2014-11-09-1jungle.markdown
+++ b/_posts/2014-11-09-1jungle.markdown
@@ -10,7 +10,7 @@ logo: logo_1jungle.jpg
 > ### 1Jungle is a membership-based website that gives people like these an expert online shopper to do the work for them.
 > Vibrant and approachable, using fun and friendly illustrations to illustrate how the idea works. Everything about the site has been designed for maximum clarity and ease of use: becoming a member, requesting a search, buying additional searches, and upgrading, downgrading or cancelling a membership.
 
-> Services: Branding, illustration and website design.
+> **Services:** Branding, illustration and website design.
 
 ![Website design, desktop size]({{ site.url }}/assets/folio_1jungle-01.jpg)
 ![Website design, mobile and iphone size]({{ site.url }}/assets/folio_1jungle-02.jpg)
